<resources>
    <string name="app_name">WorkDiArya</string>
    <string name="email">Correo electronico</string>
    <string name="password">Contraseña</string>
    <string name="cd_app_logo">WorkDiArya logo</string>
    <string name="login">Iniciar sesión</string>
    <string name="cd_prev_month">Previous month</string>
    <string name="cd_next_month">Next month</string>
    <string name="cd_add_new_date">Add new date</string>
    <string name="add_date">Agregar fecha</string>
    <string name="new_shift">Nuevo turno</string>
    <string name="kind">Tipo</string>
    <string name="ok">Aceptar</string>
    <string name="date_header">Fecha:</string>
    <string name="morning_header">T.M.</string>
    <string name="evening_header">T.V.</string>
    <string name="acumulated_working">Jornada acumulada</string>
</resources>