<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calendar_view.CalendarActivity">

    <LinearLayout
        android:id="@+id/llTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/colorPrimary"
        android:padding="16dp"
        android:weightSum="10">
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:id="@+id/ivPrevious"
            android:layout_weight="1"
            app:tint="?attr/colorOnPrimary"
            android:src="@drawable/ic_prev"
            android:contentDescription="@string/cd_prev_month"
            android:onClick="onButtonPressed"/>
        <TextView
            android:id="@+id/tvMonthTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Abril"
            android:textColor="?attr/colorOnPrimary"
            android:fontFamily="@font/hp_font"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="34sp"
            android:textAlignment="center"
            android:layout_weight="8"/>
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:id="@+id/ivNext"
            android:layout_weight="1"
            android:src="@drawable/ic_next"
            app:tint="?attr/colorOnPrimary"
            android:foregroundGravity="right"
            android:contentDescription="@string/cd_next_month"
            android:onClick="onButtonPressed"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llHeaders"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/llTopBar"
        android:weightSum="10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_header"
            android:textAlignment="center"
            android:fontFamily="@font/hp_font"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_weight="6"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/morning_header"
            android:textAlignment="center"
            android:fontFamily="@font/hp_font"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_weight="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evening_header"
            android:textAlignment="center"
            android:fontFamily="@font/hp_font"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_weight="2"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDates"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        tools:listitem="@layout/item_shift"
        tools:itemCount="15"
        app:layout_constraintTop_toBottomOf="@+id/llHeaders"
        app:layout_constraintBottom_toTopOf="@id/fabAddDate"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabAddDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/cd_add_new_date"
        android:text="@string/add_date"
        app:icon="@drawable/ic_add"
        android:onClick="onButtonPressed"/>

</androidx.constraintlayout.widget.ConstraintLayout>